# unipred

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  kalshi_markets.db  pyproject.toml  results.txt  verify_environment.sh
context/: kalshi_openapi.yaml  manage.py  polymarket_clob_openapi.yaml
context/features/: correlation.md
proto/: market_quote.proto
python/unipred/: __init__.py  core.py  market_quote_pb2.py  market_quote_pb2.pyi  storage.py  unipred_py.pyi
python/unipred/tests/: test_basic.py
scripts/: 1.sql  correlate_markets.py  fetch_all_markets.py  fetch_kalshi_markets.py  inspect_documents.py  test_lance.py
src/unipred/: __init__.py
tests/: test_basic.py
tests/integration_tests/: conftest.py  test_kalshi_markets.py  test_markets.py  test_prices.py
unipred-core/: Cargo.toml  build.rs
unipred-core/src/: domain.rs  lib.rs  ml.rs
unipred-core/src/clients/kalshi/: auth.rs  crypto.rs  exchange.rs  http.rs  kalshi_error.rs  market.rs  mod.rs  portfolio.rs  tick.rs  utils.rs
unipred-core/src/clients/polymarket/: data.rs  eth_utils.rs  headers.rs  mod.rs  orders.rs
unipred-core/src/commands/: events.rs  kalshi.rs  markets.rs  mod.rs  quote.rs
unipred-core/src/ingestion/: mod.rs
unipred-core/src/storage/: duck.rs  lance.rs  mod.rs
unipred-core/tests/: integration_test.rs
unipred-py/: Cargo.toml
unipred-py/src/: lib.rs
