[project]
name = "unipred"
version = "0.0.1"
description = "Unified prediction market domain models and toolset"
readme = "README.md"
authors = [
    { name = "Jack", email = "7218605+jackklika@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
