[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "unipred"
version = "0.1.0"
description = "Unified prediction market domain models and toolset"
authors = [{name = "Jack", email = "jack@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "duckdb>=1.3.2",
    "kalshi-python>=2.0.0",
    "python-dotenv>=1.0.1",
]

[tool.maturin]
python-source = "python"
module-name = "unipred.unipred_py"
manifest-path = "unipred-py/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
