[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "unipred"
version = "0.1.0"
description = "Unified prediction market domain models and toolset"
authors = [{name = "Jack", email = "jack@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.3.2",
    "kalshi-python>=2.0.0",
    "pandas>=2.2.0",
    "protobuf>=5.29.5",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
]

[tool.maturin]
python-source = "python"
module-name = "unipred.unipred_py"
manifest-path = "unipred-py/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
