[package]
name = "unipred-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for unipred-core"
license = "MIT"
repository = "https://github.com/jackklika/unipred"

# bindings are typically distributed via PyPI
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unipred_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
prost = "0.14.1"
pyo3 = { version = "0.23.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
unipred-core = { path = "../unipred-core" }
